# web_server_http_and_file

./: CMakeLists.txt  readme.md
include/: request.h  response.h  server.h  static_file_handler.h
public/: index.html  script.js  style.css
src/: main.cpp  request.cpp  server.cpp  static_file_handler.cpp
